negrita y color rojo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,5 @@
 body{
-    background-color: rgb(124, 124, 33);
+    background-color: rgb(41, 55, 63);
+    font-weight: bold;
+    color: #F00;
 }
